[package]
name = "unicorn-engine"
version = "2.0.0"
edition = "2021"
include = ["/.gitmodules", "/COPYING", "/Cargo.toml", "/README.md", "/src/*"]
description = "Rust bindings for the Unicorn emulator with AFL++ extensions and utility functions"
build = "build.rs"
links = "unicornafl"

[profile.release]
lto = true
opt-level = 3

[dependencies]
bitflags = "2.3.1"
capstone = "0.11.0"
colored = "2.0.0"
libc = "0.2.144"

[build-dependencies]
cmake = "0.1.50"
cc = "1.0.79"
pkg-config = "0.3.27"
build-helper = "0.1.1"
